--- a/css/style.css
+++ b/css/style.css
@@ -1441,6 +1441,12 @@ https://mkrtchyan.ga
   }
 }
 
+@media only screen and (min-width: 992px) and (max-width: 992px){
+  .centro{
+    transform: translate(0px);
+  }
+}
+
 @media only screen and (min-width: 1200px){
   .centro{
     transform: translate(-20px);
