--- a/css/style.css
+++ b/css/style.css
@@ -950,6 +950,10 @@ textarea.input {
   width: 100%;
 }
 
+.celo{
+  padding:10px;
+}
+
 /*=========================================================
 	CONTACT
 ===========================================================*/
@@ -1258,6 +1262,10 @@ textarea.input {
 
   .main-nav {
     margin: 0px;
+  }
+
+  .celo{
+    padding:17.5px;
   }
 }
   
