add updated prizes (#112)
* fixed speakers alignment in 768-992px

* minor issue

* navbar alignment resolved

* change prize pics

* modified prizes

* made prizes fully responsive + Rs->INR

* added oss-track details

* typo resolved

* improved oss-track link

Co-authored-by: aryanploxxx <guptamithlesh33@gmail.com>

--- a/css/style.css
+++ b/css/style.css
@@ -612,6 +612,88 @@ textarea.input {
 }
 
 /*=========================================================
+	PRIZES
+===========================================================*/
+
+.prize-amt{
+  color:white!important;
+}
+
+.prize-no{
+  margin-bottom: 25px!important;
+  text-decoration: underline;
+  color:#c71239;
+}
+
+.jiit-only-img{
+  margin-top: 25%;
+}
+
+@media only screen and (min-width:1200px){
+  .prize-img{
+    margin-top: 14%;
+  }
+  
+  #jiit-only{
+    margin-left:36%;
+  }
+
+  #girls-only{
+    margin-right:36%;
+  }
+}
+
+@media only screen and (min-width:992px) and (max-width:1200px){
+  .prize-img{
+    margin-top: 17%;
+  }
+
+  #jiit-only{
+    margin-left:20%;
+  }
+  
+  #girls-only{
+    margin-right:20%;
+  }
+} 
+
+@media only screen and (min-width:767px) and (max-width:992px){
+  .prize-img{
+    margin-top: 22.5%;
+  }
+  
+  .jiit-only-img{
+    margin-top: 34%;
+  }
+  
+  #jiit-only{
+    margin-left:22%;
+  }
+  
+  #girls-only{
+    margin-right:22%;
+  }
+}
+
+@media only screen and (max-width:767px){
+  #winner{
+    margin-bottom:15%;
+  }
+
+  #runner-up{
+    margin-bottom:15%;
+  }
+  
+  .jiit-only-img{
+    margin-top: 10%;
+  }
+
+  .oss-track{
+    margin-top: 10%;
+  }
+}
+
+/*=========================================================
 	SPEAKERS
 ===========================================================*/
 
@@ -1239,6 +1321,13 @@ textarea.input {
   }
 }
   
+@media only screen and (max-width: 768px) {
+  #digitalocean{
+    padding:10%;
+  }
+  
+}
+
 @media (min-width: 768px) and (max-width: 992px){
   .navbar-nav>li {
     float: none;
