--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ body {
   /* color: #fff; */
   color: #f6f7f7;
   /* background-color: #070920; */
-  background-image: url(img/bg.jpg);
+  background-image: url(/img/bg.jpg);
   overflow-x: hidden;
   background-attachment: fixed;
   background-size: 100%;
