--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ h4 {
 
 @font-face {
   font-family: tag-font;
-  src: url(FontsFree-Net-OSCILLOS.ttf);
+  src: url(/FontsFree-Net-OSCILLOS.ttf);
 }
 
 #tag {
