--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,12 @@ body {
   font-size: 16px;
   /* color: #fff; */
   color: #f6f7f7;
-  background-color: #070920;
+  /* background-color: #070920; */
+  background-image: url(/img/bg.jpg);
   overflow-x: hidden;
+  background-attachment: fixed;
+  background-size: 100%;
+  /* background-repeat: no-repeat; */
 }
 
 ::selection {
@@ -69,9 +73,10 @@ h6 {
   font-weight: 700;
 }
 
-h5.lead {
+span.lead {
   color: white;
-  font-size: 17px;
+  font-size: 27px;
+  display: flex; align-items: center;justify-content: center;
 }
 
 h1 {
@@ -92,6 +97,16 @@ h4 {
 
 .lead {
   font-size: 20px;
+}
+
+@font-face {
+  font-family: tag-font;
+  src: url(/FontsFree-Net-OSCILLOS.ttf);
+}
+
+#tag {
+  font-family: tag-font;
+  font-weight: lighter;
 }
 
 a {
@@ -241,7 +256,7 @@ textarea.input {
 
 .section-title {
   text-align: center;
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
 .section-title-prize {
   text-align: center;
@@ -253,6 +268,17 @@ textarea.input {
   font-weight: 900;
   font-size: 42px;
   overflow: hidden;
+}
+
+.section-title .text {
+  position: relative;
+  text-transform: capitalize;
+  font-size: 22px;
+  overflow: hidden;
+  padding:60px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+  /* font-family: 'Courier New', Courier, monospace; */
 }
 
 .section-title .title > span {
@@ -349,7 +375,7 @@ textarea.input {
   left: 0;
   right: 0;
   top: 0;
-  background: #a70c2d;
+  background: rgba(167, 12, 45,0.4);
   -webkit-box-shadow: 0px 0px 3px #0003;
   box-shadow: 0px 0px 3px #0003;
   border-bottom: none;
@@ -1161,9 +1187,9 @@ textarea.input {
   margin-right: 15px;
 }
 
-.contact-social a:hover {
+/* .contact-social a:hover {
   opacity: 0.8;
-}
+} */
 
 .text-center {
   margin-bottom: 20px;
@@ -1540,8 +1566,15 @@ https://mkrtchyan.ga
   font-weight: 700;
 }
 
+@font-face {
+  font-family: hey;
+  src: url(/entsans.ttf);
+}
+
+
 .centro{
   transform: translate(0px);
+  font-family: hey;
 }
 
 @media only screen and (min-width: 992px){
@@ -1560,4 +1593,381 @@ https://mkrtchyan.ga
   .centro{
     transform: translate(-20px);
   }
+}
+
+
+.footer-dark {
+  background-color: rgb(255, 255, 255, 0.1);
+  padding:50px 0;
+  color:#f0f9ff;
+  /* background-color:#282d32; */
+}
+
+.footer-dark h3 {
+  margin-top:0;
+  margin-bottom:12px;
+  font-weight:bold;
+  font-size:16px;
+}
+
+.footer-dark ul {
+  padding:0;
+  list-style:none;
+  line-height:1.6;
+  font-size:14px;
+  margin-bottom:0;
+}
+
+.footer-dark ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:1;
+}
+
+.footer-dark ul a:hover {
+  opacity:0.8;
+}
+
+@media (max-width:767px) {
+  .footer-dark .item:not(.social) {
+    text-align:center;
+    padding-bottom:20px;
+  }
+}
+
+.footer-dark .item.text {
+  margin-bottom:36px;
+}
+
+@media (max-width:767px) {
+  .footer-dark .item.text {
+    margin-bottom:0;
+  }
+}
+
+.footer-dark .item.text p {
+  opacity:0.6;
+  margin-bottom:0;
+}
+
+.footer-dark .item.social {
+  text-align:center;
+}
+
+@media (max-width:991px) {
+  .footer-dark .item.social {
+    text-align:center;
+    margin-top:20px;
+  }
+}
+
+.footer-dark .item.social > a {
+  font-size:20px;
+  width:36px;
+  height:36px;
+  line-height:36px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  box-shadow:0 0 0 1px rgba(255,255,255,0.4);
+  margin:0 8px;
+  color:#fff;
+  /* opacity:0.75; */
+}
+
+/* .footer-dark .item.social > a:hover {
+  opacity:0.9;
+} */
+
+.footer-dark .copyright {
+  text-align:center;
+  padding-top:24px;
+  /* opacity:0.3; */
+  font-size:13px;
+  margin-bottom:0;
+}
+.container {
+  position: relative;
+}
+
+.container .card {
+  position: relative;
+  width: 320px;
+  height: 350px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.container .card:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(199, 18, 57, 0);
+  clip-path: circle(150px at 80% 20%);
+  transition: 0.5s ease-in-out;
+}
+
+.container .card:hover:before {
+  clip-path: circle(300px at 80% -20%);
+}
+
+.container .card:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -20%;
+  font-size: 8em;
+  font-weight: 800;
+  font-style: italic;
+  color: rgba(255, 255, 255, 0.04);
+
+}
+
+.container .card .imgBx {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 2;
+  width: 100%;
+  height: 60%;
+  transition: .5s;
+}
+
+.container .card:hover .imgBx {
+  top: 0%;
+  transform: translateY(-25%);
+  /* bug  */
+}
+
+.container .card .imgBx img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* width: 200px;
+  height: 200px; */
+}
+
+.container .card .contentBx {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  transition: 1s;
+  z-index: 90;
+}
+
+.container .card:hover .contentBx {
+  height: 210px;
+}
+
+.container .card .contentBx h2 {
+  position: relative;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: #fff;
+}
+
+
+.container .card .contentBx .size,
+.container .card .contentBx .color {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 20px;
+  transition: .5s;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.container .card:hover .contentBx .size {
+  opacity: 1;
+  visibility: visible;
+  transition-delay: .5s;
+}
+
+.container .card:hover .contentBx .color {
+  opacity: 1;
+  visibility: visible;
+  transition-delay: .6s;
+}
+
+.container .card .contentBx .size h3,
+.container .card .contentBx .color h3 {
+  color: white;
+  font-weight: 300;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-right: 10px;
+}
+
+.container .card .contentBx .size span {
+  width: 26px;
+  height: 26px;
+  text-align: center;
+  line-height: 26px;
+  font-size: 14px;
+  display: inline-block;
+  color: #111;
+  background: #fff;
+  margin: 0 5px;
+  transition: .5s;
+  color: #111;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.container .card .contentBx .size span:hover {  /* other bug */
+  background: #B90000;
+}
+
+.container .card .contentBx .color span {
+  width: 20px;
+  height: 20px;
+  background: #ff0;
+  border-radius: 50%;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.container .card .contentBx .color span:nth-child(2) {
+   background: #1BBFE9;
+}
+
+.container .card .contentBx .color span:nth-child(3) {
+   background: #1B2FE9;
+}
+
+.container .card .contentBx .color span:nth-child(4) {
+   background: #080481;
+}
+
+.container .card .contentBx a {
+  display: inline-block;
+  padding: 10px 20px;
+  background: #fff;
+  border-radius: 4px;
+  margin-top: 10px;
+  text-decoration: none;
+  font-weight: 600;
+  color: #111;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: .5s;
+}
+
+.container .card:hover .contentBx a {
+  opacity: 1;
+  transform: translateY(0px);
+  transition-delay: .7s;
+} 
+
+
+@media (max-width:767px) {
+  #prize-container {
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width:767px) {
+  .row {
+    flex-direction: column;
+    align-content: space-between;
+  }
+
+  .row div {
+    padding: 10px;
+    text-align: center;
+  }
+}
+
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
