--- a/css/style.css
+++ b/css/style.css
@@ -1733,12 +1733,12 @@ https://mkrtchyan.ga
   transform: translateY(-50%);
   z-index: 2;
   width: 100%;
-  height: 60%;
+  height: 65%;
   transition: .5s;
 }
 
 .container .card:hover .imgBx {
-  top: 0%;
+  top: 10%;
   transform: translateY(-25%);
   /* bug  */
 }
@@ -1754,16 +1754,18 @@ https://mkrtchyan.ga
 
 .container .card .contentBx {
   position: absolute;
-  bottom: 0;
+  bottom: -10px;
   width: 100%;
   height: 100px;
   text-align: center;
   transition: 1s;
   z-index: 90;
+  transform: translateY(20%);
 }
 
 .container .card:hover .contentBx {
-  height: 210px;
+  bottom: 55px;
+  transform: translateY(-3%);
 }
 
 .container .card .contentBx h2 {
